--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "fs-extra": "^11.2.0",
     "moment": "^2.30.1",
+    "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.33.5"
   },
