--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   ],
   "author": "AbyssFlow Team",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.5",
     "chalk": "^4.1.2",
