Add creator information to env example for *git command

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,22 @@ SESSION_PATH=./session
 
 # Environment
 NODE_ENV=production
+
+# Creator Information
+CREATOR_NAME=Josias Almight
+CREATOR_BIO=Water Hashira - Full Stack Developer & Tech Innovator
+CREATOR_TAGLINE=Building the future with code and creativity 💧
+CREATOR_LOCATION=Cameroon
+CREATOR_SKILLS=JavaScript, Node.js, React, Python, WhatsApp Bots
+CREATOR_LINKEDIN=https://www.linkedin.com/in/thealmight
+CREATOR_GITHUB=https://github.com/Josiasange37
+CREATOR_GITHUB_USERNAME=Josiasange37
+CREATOR_GITHUB_BIO=Passionate developer creating innovative solutions
+CREATOR_PORTFOLIO=https://almightportfolio.vercel.app/
+CREATOR_X=https://twitter.com/AlmightJosias
+CREATOR_TWITTER=https://twitter.com/AlmightJosias
+CREATOR_TIKTOK=@almight.tech
+CREATOR_STARTUP=Xyber Clan
+CREATOR_STARTUP_URL=https://xyber-clan.vercel.app/
+STARTUP_DESCRIPTION=Innovative tech solutions and digital transformation
+CONTACT_EMAIL=contact@almight.tech
