Add Railway persistent session configuration and documentation

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,9 @@ BOT_OWNERS=218966710554635,235893092790367,237681752094,237621708081
 BOT_PREFIX=*
 
 # Session Path
-SESSION_PATH=./session
+# Local development: ./session
+# Railway (with persistent volume): ./auth_info_baileys
+SESSION_PATH=./auth_info_baileys
 
 # Environment
 NODE_ENV=production
