--- a/web/vercel.json
+++ b/web/vercel.json
@@ -1,10 +1,6 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "outputDirectory": ".next",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "https://your-api-url.railway.app"
-  }
+  "installCommand": "npm install"
 }
