--- a/.vercelignore
+++ b/.vercelignore
@@ -1,17 +1,19 @@
-# Ignore everything except web folder
-/*
-!/web
+# Ignore backend files completely
+/index.js
+/package.json
+/package-lock.json
+/node_modules
+/data
+/docs
+/api
+/session
+/assets
+*.md
+!web/
+
+# Ignore web build artifacts
 /web/node_modules
 /web/.next
 /web/.env.local
 /web/.env.production.local
 /web/.env.development.local
-
-# Ignore backend files
-/api
-/index.js
-/package.json
-/node_modules
-/data
-/docs
-*.md
