--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,10 @@
 {
   "name": "abyssflow-frontend",
   "version": 2,
-  "builds": [
-    {
-      "src": "web/package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "web/$1"
-    }
-  ],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "https://your-api-url.railway.app"
-  }
+  "buildCommand": "cd web && npm run build",
+  "devCommand": "cd web && npm run dev",
+  "installCommand": "cd web && npm install",
+  "outputDirectory": "web/.next",
+  "framework": "nextjs",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./web/"
 }
