--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:public": "next dev -H 0.0.0.0",
+    "dev:tunnel": "next dev & npx ngrok http 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "start:public": "next start -H 0.0.0.0",
+    "lint": "next lint",
+    "tunnel": "npx ngrok http 3000"
   },
   "dependencies": {
     "next": "^14.2.0",
