--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.11.0",
     "@whiskeysockets/baileys": "^6.7.21",
+    "axios": "^1.13.2",
     "chalk": "^4.1.2",
     "cohere-ai": "^7.20.0",
     "dotenv": "^17.2.3",
     "fs-extra": "^11.2.0",
     "groq-sdk": "^0.37.0",
     "moment": "^2.30.1",
+    "mongoose": "^9.0.2",
     "node-cron": "^4.2.1",
     "node-nlp": "^5.0.0-alpha.5",
+    "open-graph-scraper": "^6.11.0",
     "openai": "^6.15.0",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.33.5"
