--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^4.1.2",
     "cohere-ai": "^7.20.0",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "fs-extra": "^11.2.0",
     "groq-sdk": "^0.37.0",
     "moment": "^2.30.1",
