--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-nlp": "^5.0.0-alpha.5",
     "open-graph-scraper": "^6.11.0",
     "openai": "^6.15.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.33.5"
   },
