--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abyssflow-dashboard",
+  "name": "psycho-bot-dashboard",
   "version": "1.0.0",
   "description": "Professional Dashboard for AbyssFlow WhatsApp Bot",
   "private": true,
@@ -14,24 +14,25 @@
     "tunnel": "npx ngrok http 3000"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
+    "firebase": "^12.7.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
+    "postcss": "^8.4.35",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "framer-motion": "^11.0.0",
-    "qrcode.react": "^3.1.0",
-    "lucide-react": "^0.344.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "typescript": "^5.3.3"
   }
 }
