feat: enable external deployment and custom bot names

--- a/.env.example
+++ b/.env.example
@@ -37,4 +37,32 @@ CONTACT_EMAIL=contact@almight.tech
 # Get your FREE Hugging Face token here: https://huggingface.co/settings/tokens
 HF_TOKEN=your_hugging_face_token_here
 # Get your FREE API key here: https://aistudio.google.com/app/apikey
+# ============================================
+# AI PROVIDERS (Smart Fallback Order)
+# Priority: Gemini → Groq → Mistral → GitHub → Cohere → DeepSeek
+# ============================================
+
+# 1. PRIMARY: Google Gemini (Best quality)
+# Get FREE key: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# 2. FALLBACK-1: Groq (Super fast, Llama 3.3)
+# Get FREE key: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# 3. FALLBACK-2: Mistral AI
+# Get FREE key: https://console.mistral.ai/api-keys/
+MISTRAL_API_KEY=your_mistral_api_key_here
+MISTRAL_AGENT_ID=ag_019b5b38190670e7a41f56581ab8f052
+
+# 4. FALLBACK-3: GitHub Models (GPT-4o-mini)
+# Get FREE token: https://github.com/settings/tokens (needs beta access)
+GITHUB_TOKEN=your_github_token_here
+
+# 5. FALLBACK-4: Cohere (Command R)
+# Get FREE key: https://dashboard.cohere.com/api-keys
+COHERE_API_KEY=your_cohere_api_key_here
+
+# 6. FALLBACK-5: DeepSeek via Hugging Face
+# Get FREE token: https://huggingface.co/settings/tokens
+HF_TOKEN=your_hugging_face_token_here
