--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
+    "@genkit-ai/firebase": "^1.27.0",
+    "@genkit-ai/googleai": "^1.27.0",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.11.0",
@@ -33,6 +35,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fs-extra": "^11.2.0",
+    "genkit": "^1.27.0",
     "groq-sdk": "^0.37.0",
     "moment": "^2.30.1",
     "mongoose": "^9.0.2",
