--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.30.1",
     "mongoose": "^9.0.2",
     "node-cron": "^4.2.1",
+    "node-localstorage": "^3.0.5",
     "node-nlp": "^5.0.0-alpha.5",
     "open-graph-scraper": "^6.11.0",
     "openai": "^6.15.0",
